--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body class="bg-black text-zinc-100 antialiased">
     <canvas
       id="particles"
-      class="fixed inset-0 -z-10 pointer-events-none opacity-20"
+      class="fixed inset-0 -z-10 pointer-events-none opacity-30"
     ></canvas>
 
     <nav
@@ -338,7 +338,7 @@
           >
             <div class="overflow-hidden">
               <img
-                src="/images/Group 119.png"
+                src="/images/sd.png"
                 alt="Project"
                 class="h-48 w-full object-cover transition duration-500 group-hover:scale-105"
               />
@@ -372,7 +372,7 @@
           >
             <div class="overflow-hidden">
               <img
-                src="/images/Group 132.png"
+                src="/images/bd.png"
                 alt="Project"
                 class="h-48 w-full object-cover transition duration-500 group-hover:scale-105"
               />
