--- a/project_list.html
+++ b/project_list.html
@@ -23,7 +23,7 @@
   <body class="bg-black text-zinc-100 antialiased">
     <canvas
       id="particles"
-      class="fixed inset-0 -z-10 pointer-events-none opacity-20"
+      class="fixed inset-0 -z-10 pointer-events-none opacity-30"
     ></canvas>
 
     <div id="trailer">
@@ -194,13 +194,13 @@
       <div class="absolute top-28 left-6 z-20">
         <ul
           id="project-filters"
-          class="flex gap-4 text-xs md:text-sm font-medium"
+          class="flex gap-2 md:gap-4 text-xs md:text-sm font-medium"
         >
           <li
             data-filter="all"
             class="cursor-pointer border-b-2 border-white pb-1"
           >
-            Show All
+            All
           </li>
           <span class="text-zinc-400 hidden md:block">|</span>
           <li
