--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
   <body class="bg-black text-zinc-100 antialiased">
     <canvas
       id="particles"
-      class="fixed inset-0 -z-10 pointer-events-none opacity-20"
+      class="fixed inset-0 -z-10 pointer-events-none opacity-30"
     ></canvas>
 
     <nav
@@ -206,7 +206,7 @@
           ></div>
 
           <p
-            class="text-zinc-400 text-lg leading-relaxed mt-12 mb-4"
+            class="text-zinc-400 text-sm md:text-lg leading-relaxed mt-12 mb-4 text-justify"
             x-transition.delay.100ms
           >
             &nbsp;&nbsp;&nbsp;&nbsp;I'm
@@ -216,7 +216,7 @@
           </p>
 
           <p
-            class="text-zinc-400 text-lg leading-relaxed mb-4"
+            class="text-zinc-400 text-sm md:text-lg leading-relaxed mb-4 text-justify"
             x-transition.delay.200ms
           >
             &nbsp;&nbsp;&nbsp;&nbsp;I focus on creating clean, efficient systems
@@ -226,7 +226,7 @@
           </p>
 
           <p
-            class="text-zinc-400 text-lg leading-relaxed"
+            class="text-zinc-400 text-sm md:text-lg leading-relaxed text-justify"
             x-transition.delay.300ms
           >
             &nbsp;&nbsp;&nbsp;&nbsp;I’m constantly learning and experimenting
@@ -436,7 +436,7 @@
           x-transition:enter-start="opacity-0 translate-y-6"
           x-transition:enter-end="opacity-100 translate-y-0"
         >
-          <h1 class="text-3xl font-semibold max-w-2xl mx-auto">
+          <h1 class="text-2xl md:text-3xl font-semibold max-w-2xl mx-auto">
             Technologies I Use to Build Modern & Scalable Applications
           </h1>
         </div>
@@ -513,11 +513,11 @@
                 </li>
                 <li class="flex items-center gap-3">
                   <img
-                    src="images/auth.png"
-                    alt="Authentication"
+                    src="images/php.png"
+                    alt="Php"
                     class="w-5 h-5"
                   />
-                  Authentication
+                  Php
                 </li>
                 <li class="flex items-center gap-3">
                   <img src="images/nodejs2.png" alt="Node js" class="w-5 h-5" />
