--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
               />
             </div>
 
-            <div class="relative inset-0 flex items-end">
+            <div class="relative bg-black inset-0 flex items-end">
               <div
                 class="w-full p-5 flex items-end justify-between bg-gradient-to-t from-black/80 via-black/40 to-transparent"
               >
@@ -344,7 +344,7 @@
               />
             </div>
 
-            <div class="relative inset-0 flex items-end">
+            <div class="relative bg-black inset-0 flex items-end">
               <div
                 class="w-full p-5 flex items-end justify-between bg-gradient-to-t from-black/80 via-black/40 to-transparent"
               >
@@ -378,7 +378,7 @@
               />
             </div>
 
-            <div class="relative inset-0 flex items-end">
+            <div class="relative bg-black inset-0 flex items-end">
               <div
                 class="w-full p-5 flex items-end justify-between bg-gradient-to-t from-black/80 via-black/40 to-transparent"
               >
