doing small changes

--- a/contact.html
+++ b/contact.html
@@ -226,7 +226,7 @@
 
             <div class="flex items-center gap-2">
               <img src="/images/phone-call.png" class="w-4 h-4" />
-              <span class="text-sm md:text-lg">+6395 384 0596</span>
+              <span class="text-sm md:text-lg">+63 995 384 0596</span>
             </div>
           </div>
         </div>
